# hackaton

./: .gitignore
task3/: TASK3_REPORT.md  crypto_protocol.py  decrypt_capture.py  pluto_chat.py  requirements.txt  test_crypto_protocol.py
task3/oponent_descrypt/: intercept_decrypt.py  protocol.py
task3/receiver_module/: operation_RX.py
task3/utils/: my_radio.py
task4/: CMakeLists.txt  Makefile  README.md  TASK4_REPORT.md  dsp.py  pluto_walkie_talkie.py  requirements.txt  test_dsp.py
task4/cpp/: main.cpp
task5/: .gitignore  CMakeLists.txt  Makefile  README.md  TASK5_REPORT.md
task5/linux/2024.02.01/x86_64/: README.md
task5/linux/2024.02.01/x86_64/lib/: libhackrf.so.0.9.0
task5/linux/2024.02.01/x86_64/lib/pkgconfig/: libhackrf.pc
task5/mingw/2024.02.01/: README.md
task5/mingw/2024.02.01/lib/pkgconfig/: libhackrf.pc
task5/src/: correlation.cpp  correlation.h  iq_io.cpp  iq_io.h  main.cpp  protocol.cpp  protocol.h
